# open_prices

./: 404.html  LICENSE  Makefile  README.md  gtm.js  gtml.js  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: linter_formatter_test_deploy.yml
accueil/: index.html
contexte_metier_detaille/: index.html
data_dictionary/: index.html
detailed_business_context/: index.html
dictionnaire_donnees/: index.html
docs/: accueil.md  contexte_metier_detaille.md  data_dictionary.md  detailed_business_context.md  dictionnaire_donnees.md  index.md  organisation_projet.md  remarques.md
docs/js/: consent.js
docs/overrides/: main.html
notebooks/: 01_data_understanding.ipynb  02_data_preparation.ipynb
open_prices/: __init__.py  analytics.py  config.py  dataset.py  features.py  plot.py  plots.py  widgets.py
open_prices/modeling/: predict.py  train.py
organisation_projet/: index.html
project_organization/: index.html
remarques/: index.html
search/: search_index.json
streamlit_app/: app.py
streamlit_app/pages/: 01_ventes_devise.py  02_ventes_pays.py  03_tendance_devise.py  04_tendance_pays.py  05_ventes_magasins.py  06_ventes_annee_produits_categories.py
tests/: test_analytics.py  test_dataset.py  test_plot.py  test_widgets.py
