[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "open_prices"
version = "0.0.1"
description = "Open Prices Analysis est un projet de data science visant \u00e0 explorer et visualiser des donn\u00e9es ouvertes de prix alimentaires."
authors = [
  { name = "Ornellah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.13.7"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["open_prices"]
force_sort_within_sections = true


