[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "open_prices"
version = "0.0.1"
description = "Open Prices Analysis est un projet de data science visant \u00e0 explorer et visualiser des donn\u00e9es ouvertes de prix alimentaires."
authors = [
  { name = "Ornellah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.13,<3.14"
dependencies = [
  "black[jupyter]",
  "fastparquet",
  "ipython",
  "jupyterlab",
  "loguru",
  "matplotlib",
  "mkdocs",
  "mkdocs-material",
  "notebook",
  "numpy",
  "pandas",
  "pytest",
  "python-dotenv",
  "ruff",
  "scikit-learn",
]

[tool.black]
line-length = 99
target-version = ["py313"]
skip-string-normalization = true
include = '''
(
    \.pyi?$
  | \.ipynb$
)
'''
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 99
target-version = "py313"
extend-include = ["*.ipynb"]
exclude = [
  ".venv",
  ".git",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
fixable = ["ALL"]
