[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "open_prices"
version = "0.0.1"
description = "Open Prices Analysis est un projet de data science visant \u00e0 explorer et visualiser des donn\u00e9es ouvertes de prix alimentaires."
authors = [
  { name = "Ornellah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.13,<3.14"
dependencies = [
  "black[jupyter]",
  "fastparquet",
  "ipython",
  "jupyterlab",
  "loguru",
  "matplotlib",
  "mkdocs",
  "mkdocs-material",
  "notebook",
  "numpy",
  "pandas",
  "pytest",
  "python-dotenv",
  "ruff",
  "scikit-learn",
]

[tool.black]
line-length = 99
target-version = ["py313"]
skip-string-normalization = true
include = '''
(
    \.pyi?$
  | \.ipynb$
)
'''
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 99
target-version = "py313"
extend-include = ["*.ipynb"]
exclude = [
  ".venv",
  ".git",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "D"]
fixable = ["ALL"]
ignore = ["N801","N802","N803","N806","N812","N815","N816","D212","D211"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]
"notebooks/*.ipynb" = ["D"]
"open_prices/modeling/*.py" = ["D"]